2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* parsetagx.c: Replace '\n' (newline) with ' ' (space) in attributes of html tags instead of ignoring them.
	* Fixes Debian bug #326167: w3m: new lines in hidden form fields are stripped

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* scripts/w3mman/w3mman*.in: Add w3mman -l <file> command line argument for viewing of local man files.
	* Fixes Debian bug #138805: w3mman -l doesn't work.

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* libwc/detect.c: Use the hint instead of US_ASCII in wc_auto_detect.
	* Fixes Debian bug #291735: w3m shouldn't "simplify" page's charset

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* Str.h, table.c: Use Strnew_charp() instead of the wrong Strnew().
	* Fixes SF bug #895351 Strnew called with argument in table.c.

2006-02-10  Dai Sato  <satodai@w3m.jp>

	* http://dog.w3m.jp/bbs/spool/until200602.html#20060210153135@keijiwan
	* url.c: replace pclose passed to localcgi_post/get() with fclose in openURL()

2006-02-09  Dai Sato  <satodai@w3m.jp>

	* http://vimrc.hp.infoseek.co.jp/w3m-pclose.html
	* file.c: replace pclose with fclose in the end of uncompress_stream()

2005-02-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* configure.ac: rename from configure.in. this is for autoconf2.50

2005-02-27  NOMIYA Masaru <nomiya@ttmy.ne.jp>

	* [w3m-dev 04143] Patch for OS/2
	* config.h.in: ifdef HAVE_SETPGRP
	* configure.in: define USE_BINMODE_STREAM for *os2-emx*
	* islang.c: ULONG -> unsigned long
	* main.c: ULONG -> unsigned long

2005-02-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 01045] From newbie: problem with w3m-0.5.1 installation
	* acinclude.m4 (AC_W3M_SSL): define USE_SSL after ssl library found

2005-01-19  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 04133] mouse_end() should preced reset_tty()?